2009-07-02  Jb Evain  <jbevain@novell.com>

	* Makefile: fix cecil's location.

2009-06-09  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Linker.Steps/BaseStep.cs: New virtual API needed.

	* Mono.Linker/Pipeline.cs: API love.

2009-06-09  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Linker.csproj: Update.

	* Mono.Linker/Driver.cs: Prevent InvalidCastException.

2009-06-05  Jb Evain  <jbevain@novell.com>

	* Mono.Linker.Steps/MarkStep.cs: fix a nre.
	Based on patch by Andres G. Aragoneses  <aaragoneses@novell.com>.

2009-06-05  Jb Evain  <jbevain@novell.com>

	* Mono.Linker.Steps/ResolveFromXmlStep.cs: more ways of choosing fields.

2009-06-05  Jb Evain  <jbevain@novell.com>

	* Mono.Linker.Steps/ResolveFromXmlStep.cs: give us more
	possibilities to detail the xml descriptors.

2009-06-04  Jb Evain  <jbevain@novell.com>

	* Mono.Linker.Steps/ResolveFromXmlStep.cs: fix handling
	of wildcards constructors.

2009-04-23  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Linker/Driver.cs: Report error and exit if it cannot
	  resolve some type (useful to avoid an ugly TypeLoadException
	  when specifying an erroneus custom step).

2009-04-21  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Driver.cs: Postprocess custom steps in order to make them
	able to find steps determined by the resolve method. Fixes
	#493702.

2009-04-08  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Linker.csproj: Update.

2009-02-18  Jb Evain  <jbevain@novell.com>

	* Mono.Linker/XApiService.cs: delete, unused.
	* Mono.Linker/Driver.cs: don't use the uneeded XApiService anymore.

2009-01-28  Jb Evain  <jbevain@novell.com>

	* Mono.Linker/AssemblyResolver.cs
	  Mono.Linker.Steps/MarkStep.cs:
		Directly use the Resolve methods from Cecil.

2008-12-16  Jb Evain  <jbevain@novell.com>

	* Makefile: build monolinker.exe in the profile directory instead of
	the current one.

2008-12-02  Jb Evain  <jbevain@novell.com>
