@@ -1,3 +1,9 @@
+2009-09-09  Andrés G. Aragoneses  <aaragoneses@novell.com>
+
+	* Mono.Linker.Steps/MarkStep.cs: Visibility changes needed by
+	  the need of some new tuner step to redefine or call some
+	  methods.
+
 2009-07-02  Jb Evain  <jbevain@novell.com>
 
 	* Makefile: fix cecil's location.
